Use React cratePortal to fix popup showing behind

--- a/packages/app/src/app/globals.css
+++ b/packages/app/src/app/globals.css
@@ -58,8 +58,7 @@ body {
 }
 
 .popup {
-  /* Ensure it's on top of other content */
-  @apply z-1000 absolute border-gray-400 border bg-gray-100 text-gray-900 text-sm;
+  @apply border-gray-400 border bg-gray-100 text-gray-900 text-sm;
 }
 
 .button {
